test/libsolidity/syntaxTests/nameAndTypeResolution/077_fallback_function_with_return_parameters.sol
contract C {
    function() public returns (uint) { }
}
// ----
// TypeError: (43-49): Fallback function cannot return values.
